--- a/index.html
+++ b/index.html
@@ -15,4 +15,6 @@
     <body>
         <div id='game'></div>
     </body>
+    <script src="js/game.js" type="text/javascript"></script>
+    <script src="js/main.js" type="text/javascript"></script>
 </html>
