--- a/index.html
+++ b/index.html
@@ -17,4 +17,5 @@
     </body>
     <script src="js/game.js" type="text/javascript"></script>
     <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/client.js" type="text/javascript"></script>
 </html>
