--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <script src="/socket.io/socket.io.js"></script>
-        <script type="text/javascript" src="js/phaser/phaser.min.js"></script>
-        <script type="text/javascript" src="js/phaser/CanvasInput.js"></script>
+        <script type="text/javascript" src="js/client/phaser/phaser.min.js"></script>
+        <script type="text/javascript" src="js/client/phaser/CanvasInput.js"></script>
         <title>Pogchamp Online</title>
         <style>
             html, body {
@@ -15,7 +15,7 @@
     <body>
         <div id='game'></div>
     </body>
-    <script src="js/game.js" type="text/javascript"></script>
-    <script src="js/client.js" type="text/javascript"></script>
-    <script src="js/main.js" type="text/javascript"></script>
+    <script src="js/client/game.js" type="text/javascript"></script>
+    <script src="js/client/client.js" type="text/javascript"></script>
+    <script src="js/client/main.js" type="text/javascript"></script>
 </html>
