More misc changes

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <script src="/socket.io/socket.io.js"></script>
-        <script type="text/javascript" src="js/client/phaser/phaser.min.js"></script>
-        <script type="text/javascript" src="js/client/phaser/CanvasInput.js"></script>
+        <script src="/socket.io/socket.io.js" type="text/javascript"></script>
+        <script src="js/client/phaser/phaser.min.js" type="text/javascript"></script>
+        <script src="js/client/phaser/CanvasInput.js" type="text/javascript"></script>
         <title>Pogchamp Online</title>
         <style>
             html, body {
