--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" type="image/png" href="/assets/favicon/favicon.png" />
         <script src="/socket.io/socket.io.js" type="text/javascript"></script>
         <script src="js/client/phaser/phaser.min.js" type="text/javascript"></script>
         <script src="js/client/phaser/CanvasInput.js" type="text/javascript"></script>
