--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <link rel="icon" type="image/png" href="/assets/favicon/favicon.png" />
         <script src="/socket.io/socket.io.js" type="text/javascript"></script>
-        <script src="js/client/phaser/phaser.min.js" type="text/javascript"></script>
         <script src="js/client/phaser/CanvasInput.js" type="text/javascript"></script>
         <title>Pogchamp Online</title>
         <style>
@@ -14,9 +13,6 @@
         </style>
     </head>
     <body>
-        <div id='game'></div>
     </body>
-    <script src="js/client/game.js" type="text/javascript"></script>
-    <script src="js/client/client.js" type="text/javascript"></script>
-    <script src="js/client/main.js" type="text/javascript"></script>
+    <script src="build/app.bundle.js" type="text/javascript"></script>
 </html>
