--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     </head>
     <body>
     </body>
-    <script src="build/app.bundle.js" type="text/javascript"></script>
+    <script src="build/vendor.js" type="text/javascript"></script>
+    <script src="build/app.js" type="text/javascript"></script>
 </html>
